syntax = "proto3";
package arbiter.stake.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "arbiter/stake/v1beta/stake.proto";

option go_package = "github.com/sapiens-cosmos/arbiter/x/stake/types";


message GenesisState {
    StakeState stake_state = 1 [ (gogoproto.nullable) = false ];
    // balance of the stake module's account
    cosmos.base.v1beta1.Coin module_account_balance = 2 [
        (gogoproto.moretags) = "yaml:\"module_account_balance\"",
        (gogoproto.nullable) = false
    ];
    cosmos.base.v1beta1.Coin module_account_s_token_balance = 3 [
        (gogoproto.moretags) = "yaml:\"module_account_balance\"",
        (gogoproto.nullable) = false
    ];
}