syntax = "proto3";
package arbiter.stake.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sapiens-cosmos/arbiter/x/stake/types";

// Msg defines the stake Msg service.
service Msg {
  rpc JoinStake(MsgJoinStake) returns (MsgJoinStakeResponse);
}

message MsgJoinStake {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  cosmos.base.v1beta1.Coin token_in = 2 [
    (gogoproto.moretags) = "yaml:\"token_in\"",
    (gogoproto.nullable) = false
  ];
}

message MsgJoinStakeResponse {}
